# ttr

./: .gitignore  .merlin  Cargo.toml  LICENSE  README.md  bsconfig.json  elm.json  package.json  pnpm-lock.yaml  rollup.config.js  tsconfig.json  webpack.config.js
migrations/2018-09-14-170759_create_games/: up.sql
migrations/2018-09-18-120751_tiles/: down.sql  up.sql
release/: index.html  main.js
src/backend/: db.rs  main.rs  models.rs  schema.rs
src/frontend/: Main.elm  Main.ml  index.tsx
src/frontend-elm/: Main.elm
src/frontend/components/: App.tsx  NewGame.tsx
src/frontend/components/App/: App.tsx
src/frontend/components/Controls/: Controls.tsx
src/frontend/components/GameWindow/: GameWindow.css  GameWindow.tsx
src/frontend/components/Map/: Map.css  Map.tsx
src/frontend/components/Messages/: Messages.css  Messages.tsx
src/frontend/components/NewGame/: NewGame.tsx
src/frontend/components/Player/: Player.css  Player.tsx
src/frontend/components/Resources/: Resources.css  Resources.tsx
src/frontend/components/Time/: Time.css  Time.tsx
src/frontend/store/: ActionModel.ts  AppState.ts  AppStore.ts  ButtonModel.ts  GameModel.ts  PlayerModel.ts  ResourceModel.ts  TileModel.ts  index.ts
src/frontend/store/models/: ActionModel.ts  ButtonModel.ts  ButtonsModel.ts  EffectModel.ts  GameModel.ts  PlayerModel.ts  ResourceModel.ts  TileModel.ts  TimeModel.ts
static/: index.html
