[package]
authors = ["deciduously <github@deciduously.com>"]
name = "ttr"
version = "0.1.0"
[[bin]]
name = "ttr"
path = "src/backend/main.rs"

[dependencies]
actix = "0.7"
actix-web = "0.7"
dotenv = "0.9"
futures = "0.1"
log = "0.4"
pretty_env_logger = "0.2"
r2d2 = "*"

[dependencies.diesel]
features = ["postgres", "r2d2"]
version = "1.0.0"

[dependencies.uuid]
features = ["v4"]
version = "*"
